--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
             </div>
 
             <div class="gridContainer">
-                <div class="CourtsGalery GaleryImgFirst"><a href="image/galeriaTennisBig.jpg"
+                <div class="CourtsGalery GaleryImgFirst lazyGalerty" data-lazy_galery_smal_src='image/galeriaTennisSmall.jpg' data-lazy_galery_big_src='image/galeriaTennisBig.jpg'><a href="image/galeriaTennisBig.jpg"
                         data-lightbox="CentrumGalery"></a></div>
-                <div class="CourtsGalery GaleryImgSecond"><a href="image/galeriaTennisCourtBig.jpg"
+                <div class="CourtsGalery GaleryImgSecond lazyGalerty" data-lazy_galery_smal_src='image/galeriaTennisCourtSmall.jpg' data-lazy_galery_big_src='image/galeriaTennisCourtBig.jpg'><a href="image/galeriaTennisCourtBig.jpg"
                         data-lightbox="CentrumGalery"></a></div>
-                <div class="CourtsGalery GaleryImgThird"><a href="image/galeriaTennisHalaBig.jpg"
+                <div class="CourtsGalery GaleryImgThird lazyGalerty" data-lazy_galery_smal_src='image/galeriaTennisHalaSmall.jpg' data-lazy_galery_big_src='image/galeriaTennisHalaBig.jpg'><a href="image/galeriaTennisHalaBig.jpg"
                         data-lightbox="CentrumGalery"></a></div>
-                <div class="CourtsGalery GaleryImgFour"><a href="image/galeriaTenisExpressBig.jpg"
+                <div class="CourtsGalery GaleryImgFour lazyGalerty" data-lazy_galery_smal_src='image/galeriaTenisExpressSmall.jpg' data-lazy_galery_big_src='image/galeriaTenisExpressBig.jpg'><a href="image/galeriaTenisExpressBig.jpg"
                         data-lightbox="CentrumGalery"></a></div>
             </div>
         </section>
@@ -126,9 +126,9 @@
                     <h3>Michał Mojżeszek</h3>
                 </div>
                 <div class="aboutPhoto aboutItem">
-                    <img src="image/trenerPhoto.jpg" alt="" data-lazyLoad="image/trenerPhoto.jpg">
+                    <img src="image/trenerPhoto.jp" alt="" data-lazy_photo="image/trenerPhoto.jpg">
                 </div>
-                <div class="aboutTextBackground aboutItem">
+                <div class="aboutTextBackground aboutItem" data-lazy_photo_small_background='image/aboutBackgroundSmall.jpg' data-lazy_photo_big_background='image/aboutBackgroundBig.jpg'>
                     <button class="btnArr farTop">
                         <i class="fas fa-sort-up"></i>
                     </button>
@@ -168,7 +168,7 @@
                 </div>
             </div>
             <div class="price">
-                <div class="priceImage"></div>
+                <div class="priceImage" data-lazy_small_price_background='image/priceBackgroundSmall.jpg' data-lazy_big_price_background='image/priceBackgroundBig.jpg'></div>
                 <div class="priceText">
                     <p>
                         <span>Indywidualnie</span> ustalany w zależności od zainteresowania wynajmem danej godziny.
@@ -241,6 +241,7 @@
 
     <script src="lightbox/js/lightbox-plus-jquery.js"></script>
     <script src="js/animation.js"></script>
+    <script src="js/lazyLoading.js"></script>
     <script src="js/main.js"></script>
     <script media="(min-width: 768px)" src="js/scrollSpy.js"></script>
 </body>
