--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
                 </div>
                 <div class="contactMap">
                     <iframe
+                        data-src_true="false"
                         src=""
                         width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
                 </div>
