--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-
+<!--Mobile Navigation-->
     <nav id="Mobile">
         <div class="navMenu">
             <button class="navMenuBtn">
@@ -28,7 +28,7 @@
                 <div class="lineBot lineMenu"></div>
             </button>
         </div>
-        <div class="navList">
+        <div class="navList" data-active_menu="false">
             <ul>
                 <li><a href="#Home">Home</a>
                     <div class="activeMenu activeMenuLeft"></div>
@@ -56,6 +56,7 @@
             </div>
         </div>
     </nav>
+<!--Tablet+ navigation-->
     <nav id="Tablet">
         <div class="navList">
             <ul>
