--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-<!--Mobile Navigation-->
+    <!--Mobile Navigation-->
     <nav id="Mobile">
         <div class="navMenu">
             <button class="navMenuBtn">
@@ -56,7 +56,7 @@
             </div>
         </div>
     </nav>
-<!--Tablet+ navigation-->
+    <!--Tablet+ navigation-->
     <nav id="Tablet">
         <div class="navList">
             <ul>
@@ -78,12 +78,13 @@
             </ul>
         </div>
     </nav>
+
     <main>
         <section id="Home" class="scrollFix">
             <div class="homeImgHero">
                 <div class="homeImgShadow"></div>
                 <div class="homeImgText">
-                    <h1>Witamy w<br>
+                    <h1 class="">Witamy w<br>
                         Centrum Tenisowym<br>
                         Mojżeszek</h1>
                 </div>
@@ -94,32 +95,46 @@
                 </a>
             </div>
         </section>
+
         <section id="TenisCentrum" class="scrollFix">
             <div class="textHeader">
-                <div class="lineDecoration">
-                    <h2>Galeria</h2>
+                <div class="lineDecoration t8">
+                    <h2><span class="left t1 animated" data-animated="false">G</span><span class="left t2">a</span><span class="left t3">l</span><span
+                            class="left t4">e</span><span class="left t5">r</span><span class="left t6">i</span><span
+                            class="left t7">a</span>
+                    </h2>
                 </div>
                 <p>Do Państwa dyspozycji są dwa
-                    kort wykonane z wysokiej klasy materiałów wyposarzonych w monitoring wewnętrzny.</p>
-                <p>Na Państwa życzenie możliwość zapisu rozgrywki.</p>
+                    korty wykonane z wysokiej klasy materiałów, wyposażone w monitoring wewnętrzny.</p>
+                <p>Na Państwa życzenie istnieje możliwość zapisu rozgrywki.</p>
                 <p>Po meczu zapraszamy na wyśmienitą kawę.</p>
             </div>
 
             <div class="gridContainer">
-                <div class="CourtsGalery GaleryImgFirst lazyGalerty" data-lazy_galery_smal_src='image/galeriaTennisSmall.jpg' data-lazy_galery_big_src='image/galeriaTennisBig.jpg'><a href="image/galeriaTennisBig.jpg"
+                <div class="CourtsGalery GaleryImgFirst lazyGalerty"
+                    data-lazy_galery_smal_src='image/galeriaTennisSmall.jpg'
+                    data-lazy_galery_big_src='image/galeriaTennisBig.jpg'><a href="image/galeriaTennisBig.jpg"
                         data-lightbox="CentrumGalery"></a></div>
-                <div class="CourtsGalery GaleryImgSecond lazyGalerty" data-lazy_galery_smal_src='image/galeriaTennisCourtSmall.jpg' data-lazy_galery_big_src='image/galeriaTennisCourtBig.jpg'><a href="image/galeriaTennisCourtBig.jpg"
+                <div class="CourtsGalery GaleryImgSecond lazyGalerty"
+                    data-lazy_galery_smal_src='image/galeriaTennisCourtSmall.jpg'
+                    data-lazy_galery_big_src='image/galeriaTennisCourtBig.jpg'><a href="image/galeriaTennisCourtBig.jpg"
                         data-lightbox="CentrumGalery"></a></div>
-                <div class="CourtsGalery GaleryImgThird lazyGalerty" data-lazy_galery_smal_src='image/galeriaTennisHalaSmall.jpg' data-lazy_galery_big_src='image/galeriaTennisHalaBig.jpg'><a href="image/galeriaTennisHalaBig.jpg"
+                <div class="CourtsGalery GaleryImgThird lazyGalerty"
+                    data-lazy_galery_smal_src='image/galeriaTennisHalaSmall.jpg'
+                    data-lazy_galery_big_src='image/galeriaTennisHalaBig.jpg'><a href="image/galeriaTennisHalaBig.jpg"
                         data-lightbox="CentrumGalery"></a></div>
-                <div class="CourtsGalery GaleryImgFour lazyGalerty" data-lazy_galery_smal_src='image/galeriaTenisExpressSmall.jpg' data-lazy_galery_big_src='image/galeriaTenisExpressBig.jpg'><a href="image/galeriaTenisExpressBig.jpg"
-                        data-lightbox="CentrumGalery"></a></div>
+                <div class="CourtsGalery GaleryImgFour lazyGalerty"
+                    data-lazy_galery_smal_src='image/galeriaTenisExpressSmall.jpg'
+                    data-lazy_galery_big_src='image/galeriaTenisExpressBig.jpg'><a
+                        href="image/galeriaTenisExpressBig.jpg" data-lightbox="CentrumGalery"></a></div>
             </div>
         </section>
+
         <section id="Personel" class="scrollFix">
             <div class="textHeader">
-                <div class="lineDecoration">
-                    <h2>Kadra</h2>
+                <div class="lineDecoration t8">
+                    <h2><span class="right t7 animated" data-animated="false">K</span><span class="right t6">a</span><span
+                            class="right t5">d</span><span class="right t4">r</span><span class="right t3">a</span></h2>
                 </div>
             </div>
             <div class="about gridContainer">
@@ -129,7 +144,9 @@
                 <div class="aboutPhoto aboutItem">
                     <img src="image/trenerPhoto.jp" alt="" data-lazy_photo="image/trenerPhoto.jpg">
                 </div>
-                <div class="aboutTextBackground aboutItem" data-lazy_photo_small_background='image/aboutBackgroundSmall.jpg' data-lazy_photo_big_background='image/aboutBackgroundBig.jpg'>
+                <div class="aboutTextBackground aboutItem"
+                    data-lazy_photo_small_background='image/aboutBackgroundSmall.jpg'
+                    data-lazy_photo_big_background='image/aboutBackgroundBig.jpg'>
                     <button class="btnArr farTop">
                         <i class="fas fa-sort-up"></i>
                     </button>
@@ -164,12 +181,15 @@
 
         <section id="Price" class="scrollFix">
             <div class="textHeader">
-                <div class="lineDecoration">
-                    <h2>Cennik</h2>
+                <div class="lineDecoration t8">
+                    <h2><span class="left t2 animated" data-animated="false">C</span><span class="left t3">e</span><span class="left t4">n</span><span
+                            class="left t5">n</span><span class="left t6">i</span><span class="left t7">k</span>
+                    </h2>
                 </div>
             </div>
             <div class="price">
-                <div class="priceImage" data-lazy_small_price_background='image/priceBackgroundSmall.jpg' data-lazy_big_price_background='image/priceBackgroundBig.jpg'></div>
+                <div class="priceImage" data-lazy_small_price_background='image/priceBackgroundSmall.jpg'
+                    data-lazy_big_price_background='image/priceBackgroundBig.jpg'></div>
                 <div class="priceText">
                     <p>
                         <span>Indywidualnie</span> ustalany w zależności od zainteresowania wynajmem danej godziny.
@@ -186,8 +206,9 @@
 
         <section id="Contact" class="scrollFix">
             <div class="textHeader">
-                <div class="lineDecoration">
-                    <h2>Kontakt</h2>
+                <div class="lineDecoration t8">
+                    <h2><span class="right t7 animated" data-animated="false">K</span><span class="right t6">o</span><span
+                        class="right t5">n</span><span class="right t4">t</span><span class="right t3">a</span><span class="right t2">k</span><span class="right t1">t</span></h2>
                 </div>
             </div>
             <div class="contactItem">
@@ -214,10 +235,8 @@
                     </table>
                 </div>
                 <div class="contactMap">
-                    <iframe
-                        data-src_true="false"
-                        src=""
-                        width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                    <iframe data-src_true="false" src="" width="400" height="300" frameborder="0" style="border:0;"
+                        allowfullscreen=""></iframe>
                 </div>
             </div>
         </section>
