--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
         <section id="TenisCentrum" class="scrollFix">
             <div class="textHeader">
                 <div class="lineDecoration t8">
-                    <h2><span class="left t1 animated" data-animated="false">G</span><span class="left t2">a</span><span class="left t3">l</span><span
-                            class="left t4">e</span><span class="left t5">r</span><span class="left t6">i</span><span
-                            class="left t7">a</span>
+                    <h2><span class="left t1 animated" data-animated="false">G</span><span class="left t2">a</span><span
+                            class="left t3">l</span><span class="left t4">e</span><span class="left t5">r</span><span
+                            class="left t6">i</span><span class="left t7">a</span>
                     </h2>
                 </div>
                 <p>Do Państwa dyspozycji są dwa
@@ -133,8 +133,9 @@
         <section id="Personel" class="scrollFix">
             <div class="textHeader">
                 <div class="lineDecoration t8">
-                    <h2><span class="right t7 animated" data-animated="false">K</span><span class="right t6">a</span><span
-                            class="right t5">d</span><span class="right t4">r</span><span class="right t3">a</span></h2>
+                    <h2><span class="right t7 animated" data-animated="false">K</span><span
+                            class="right t6">a</span><span class="right t5">d</span><span class="right t4">r</span><span
+                            class="right t3">a</span></h2>
                 </div>
             </div>
             <div class="about gridContainer">
@@ -182,8 +183,9 @@
         <section id="Price" class="scrollFix">
             <div class="textHeader">
                 <div class="lineDecoration t8">
-                    <h2><span class="left t2 animated" data-animated="false">C</span><span class="left t3">e</span><span class="left t4">n</span><span
-                            class="left t5">n</span><span class="left t6">i</span><span class="left t7">k</span>
+                    <h2><span class="left t2 animated" data-animated="false">C</span><span class="left t3">e</span><span
+                            class="left t4">n</span><span class="left t5">n</span><span class="left t6">i</span><span
+                            class="left t7">k</span>
                     </h2>
                 </div>
             </div>
@@ -207,8 +209,9 @@
         <section id="Contact" class="scrollFix">
             <div class="textHeader">
                 <div class="lineDecoration t8">
-                    <h2><span class="right t7 animated" data-animated="false">K</span><span class="right t6">o</span><span
-                        class="right t5">n</span><span class="right t4">t</span><span class="right t3">a</span><span class="right t2">k</span><span class="right t1">t</span></h2>
+                    <h2><span class="right t7 animated" data-animated="false">K</span><span
+                            class="right t6">o</span><span class="right t5">n</span><span class="right t4">t</span><span
+                            class="right t3">a</span><span class="right t2">k</span><span class="right t1">t</span></h2>
                 </div>
             </div>
             <div class="contactItem">
@@ -262,9 +265,9 @@
 
     <script src="lightbox/js/lightbox-plus-jquery.js"></script>
     <script src="js/animation.js"></script>
+    <script src="js/scrollSpy.js"></script>
     <script src="js/lazyLoading.js"></script>
     <script src="js/main.js"></script>
-    <script media="(min-width: 768px)" src="js/scrollSpy.js"></script>
 </body>
 
 </html>
