--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="pl">
 
 <head>
@@ -96,7 +96,7 @@
             </div>
         </section>
 
-        <section id="TenisCentrum" class="scrollFix">
+        <section id="TenisCentrum">
             <div class="textHeader">
                 <div class="lineDecoration t8">
                     <h2><span class="left t1 animated" data-animated="false">G</span><span class="left t2">a</span><span
@@ -130,7 +130,7 @@
             </div>
         </section>
 
-        <section id="Personel" class="scrollFix">
+        <section id="Personel">
             <div class="textHeader">
                 <div class="lineDecoration t8">
                     <h2><span class="right t7 animated" data-animated="false">K</span><span
@@ -180,7 +180,7 @@
             </div>
         </section>
 
-        <section id="Price" class="scrollFix">
+        <section id="Price">
             <div class="textHeader">
                 <div class="lineDecoration t8">
                     <h2><span class="left t2 animated" data-animated="false">C</span><span class="left t3">e</span><span
@@ -206,7 +206,7 @@
             </div>
         </section>
 
-        <section id="Contact" class="scrollFix">
+        <section id="Contact">
             <div class="textHeader">
                 <div class="lineDecoration t8">
                     <h2><span class="right t7 animated" data-animated="false">K</span><span
@@ -216,7 +216,7 @@
             </div>
             <div class="contactItem">
                 <div class="contactText">
-                    <h4>Cetrum Tenisowe Mojżeszek</h4>
+                    <h4>Centrum Tenisowe Mojżeszek</h4>
                     <p>Michał Mojżeszek</p>
                     <p>ul. Hebanowa 20A</p>
                     <p>87-100 Toruń</p>
